# kapy-exif

./: .gitignore  Cargo.toml  README.md
src/: exif.rs  heic.rs  internal.rs  jpeg.rs  lib.rs
