[package]
name = "kapy-exif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
hex = "0.4.3"
log = "0.4.22"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.11.3"
